# tool

./: CMakeLists.txt  config.properties  download.c  download.h  gen.bat  icon.res  jsonFormat.c  jsonFormat.h  levenshtein.c  levenshtein.h  main.c  md5.c  md5.h  openProjects.c  openProjects.h  sslsocket.c  unicode.c  unicode.h  util.c  util.h  uuid.c  uuid.h  version  winFrame.c  winFrame.h
resource/: res.rc
